nautilus-extension.h prototypes linkage inconsistency
The file nautilus-extension.h
contains some prototypes for nautilus module to implement (nautilus_module_initalize
, nautilus_module_shutdown
, nautilus_module_list_types
). However, they are not between G_BEGIN_DECLS
and G_END_DECLS
, which means that when you include nautilus-extension.h
from C++ code, these prototypes get C++ linkage instead of the expected C linkage. I'd suggest adding the guards, or marking each prototype extern "C"
directly.