nautilus-extension: Use G_(BEGIN/END)_DECLS in headers

This fixes issues with exporting to C++.

Fixes: https://gitlab.gnome.org/GNOME/nautilus/-/issues/1884